# simple-alert-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  rust-release.yml
src/: cli.yml  main.rs  prelude.rs
src/service/: client.rs  mod.rs  server.rs
