[package]
name = "simple-alert-rs"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"

bytes = "0.5.4"
futures-util = "0.3.4"
serde_json = "1.0.51"
chrono = "0.4.11"

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]

[dependencies.hyper]
version = "0.13.4"
[dependencies.hyper-tls]
version = "0.4.1"
[dependencies.tokio]
version = "0.2.18"
features = ["full"]